--- a/htmlcss_basics/style.css
+++ b/htmlcss_basics/style.css
@@ -6,14 +6,10 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    padding: 0;
 }
-
-/*
- NUANCIER
- blue => #1111ff;
- vert => #11ff00;
- */
 
 img {
     max-width: 100%;
@@ -22,82 +18,128 @@ img {
 }
 
 
-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+/*
+ NUANCIER
+ orange => #F2BE22;
+ vert => #185359;
+ blue => #30A5BF
+ */
 
-    border-bottom: 1px solid;
-    padding-bottom: 20px;
-    margin-bottom: 40px;
-}
-
-.main_menu {
-    list-style: none;
-    display: flex;
-    align-items: center;
-}
-.main_menu a {
-    text-transform: uppercase;
-    font-size: 18px;
-    text-decoration: none;
-    padding: 5px 10px;
-}
-
+/* Typographies */
 
 h1 {
     color: white;
     font-size: 40px;
     text-transform: uppercase;
-    font-family: arial, sans-serif;
     font-weight: normal;
     font-style: italic;
     text-align: right;
 
-    width: 50%;
-    background-color: #1111ff;
-    margin: 40px 75px 60px 20px;
+    width: 55%;
+    background-color: #185359;
+    margin: 40px 75px 60px 0;
     padding: 40px;
 }
 
+h2 {
+    color: #30A5BF;
+    margin-top: 40px;
+    border-bottom: 1px solid;
+    padding-bottom: 10px;
+}
+
 a {
-    color: #1111ff;
-    letter-spacing: .2em;
+    color: #F2BE22;
+    letter-spacing: .1em;
+    transition: all .3s;
 }
     a:hover {
-        color: #11ff00;
+        letter-spacing: .13em;
     }
     a:visited {
-        color: #1111ff;
+        color: #F2BE22;
     }
 
-p {
+p, ul {
     font-size: 18px;
 }
+
+
+
+/* Layout général */
+
+.wrapper {
+    width: 80%;
+    max-width: 960px;
+    margin: auto;
+}
+
+
+/* Header */
+
+header {
+
+    border-bottom: 1px solid;
+    padding: 20px;
+    margin-bottom: 40px;
+}
+    header .wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .main_menu {
+        list-style: none;
+        display: flex;
+        align-items: center;
+    }
+        .main_menu a {
+            text-transform: uppercase;
+            font-size: 18px;
+            text-decoration: none;
+            padding: 5px 10px;
+        }
+
+
+
+/* Footer */
+
+footer {
+    background-color: #30A5BF;
+    padding: 40px;
+    min-height: 300px;
+    margin-top: 100px;
+}
+
+
+/* Bloc introduction */
 
 .introduction {
     font-size: 22px;
     font-weight: bold;
-    color: #11ff00;
+    color: #185359;
 }
     .introduction a {
         color: inherit;
     }
 
-.information {
-    font-weight: normal;
-}
+
+
+/* Mon composant à colonnes */
 
 .composant_column {
-    width: 700px;
-    margin: auto;
-    padding: 20px;
+    width: 90%;
+    margin: 60px auto;
 
     display: flex;
-    align-items: center;
+    align-items: flex-end;
 }
-
-.first_layer {
-    width: 200px;
-    margin-right: 40px;
-}
+    .first_layer {
+        width: 45%;
+        flex: 0 0 45%;
+        margin-right: 60px;
+    }
+    .second_layer p {
+        margin: 0;
+    }
